@@ -1541,6 +1541,75 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+comment|// test null core
+try|try
+block|{
+name|admin
+operator|.
+name|handleRequestBody
+argument_list|(
+name|req
+argument_list|(
+name|CoreAdminParams
+operator|.
+name|ACTION
+argument_list|,
+name|CoreAdminParams
+operator|.
+name|CoreAdminAction
+operator|.
+name|RELOAD
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+argument_list|,
+name|resp
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Was able to successfully reload null core"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+operator|(
+name|e
+operator|instanceof
+name|SolrException
+operator|)
+condition|)
+block|{
+name|fail
+argument_list|(
+literal|"Expected SolrException but got "
+operator|+
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+name|assertEquals
+argument_list|(
+literal|"Expected error message for non-existent core."
+argument_list|,
+literal|"Core with core name [null] does not exist."
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
